<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Nombre del producto -->
    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonDeleteProduct"
        app:layout_constraintHorizontal_bias="0" />

    <!-- Botón para eliminar producto -->
    <ImageButton
        android:id="@+id/buttonDeleteProduct"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete_product"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Categoría del producto -->
    <TextView
        android:id="@+id/textViewProductCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/category_label"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/textViewProductName"
        app:layout_constraintTop_toBottomOf="@id/textViewProductName" />

    <!-- Botón para editar producto -->
    <ImageButton
        android:id="@+id/buttonEditProduct"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_product"
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintEnd_toStartOf="@id/buttonDeleteProduct"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
